fix: centralize dog breed config and pet filter ui